# llvmMRIS

./: CMakeLists.txt  README
minreg/: CMakeLists.txt  LiveVars.cpp  MinReg.cpp  XLCleanup.cpp
nvassume/: CMakeLists.txt  NVAssume.cpp
redwidth/: CMakeLists.txt  ReduceWidth.cpp
